--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     {% endblock %}
     <!-- Bootstrap Styles-->
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- FontAwesome Styles-->
     <link href="/static/assets/css/font-awesome.css" rel="stylesheet"/>
     <!-- Morris Chart Styles-->
