--- a/SpiderDB/templates/yuqing.html
+++ b/SpiderDB/templates/yuqing.html
@@ -1,12 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% for list in list_ke %}
-      {% for ar in list %}
-         <p>    {{ ar.title }}</p>
-       {% endfor %}
+    <h1>文章列表</h1>
+    <table class="table table-striped table-bordered" style="table-layout: fixed">
+        <thead>
+        <th class="col-md-4">文章标题</th>
+{#        <th class="col-md-4">文章简介</th>#}
+        <th class="col-md-4">文章url</th>
+        </thead>
 
-        <br>
-    {% endfor %}
+        {% for list in list_ke %}
+            {% for ar in list %}
+                <tbody class="">
+                <td style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis">    {{ ar.title }}</td>
+{#                <td style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis">    {{ ar.detail }}</td>#}
+                <td style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis"><a
+                        href="{{ ar.url }}"> {{ ar.url }}</a></td>
+                </tbody>
+            {% endfor %}
+        {% endfor %}
+
+    </table>
+
+
+
 
 
 {% endblock %}
