--- a/templates/user_management_html/search_user.html
+++ b/templates/user_management_html/search_user.html
@@ -36,14 +36,14 @@
             <!-- 查询end-->
             <!-- form 多选-->
 
-            <select name="action" id="" style="width: 200px; padding:5px 8px;   display: inline-block">
-
-                <option value="------">--------</option>
-                <option value="批量删除">批量删除</option>
-
-
-            </select>
-            <button type="submit" class="btn btn-info">执行批量删除</button>
+{#            <select name="action" id="" style="width: 200px; padding:5px 8px;   display: inline-block">#}
+{##}
+{#                <option value="------">--------</option>#}
+{#                <option value="批量删除">批量删除</option>#}
+{##}
+{##}
+{#            </select>#}
+{#            <button type="submit" class="btn btn-info">执行批量删除</button>#}
 
             <table class="table table-hover table-bordered">
                 <thead>
