--- a/templates/mail_pictures/pictures.html
+++ b/templates/mail_pictures/pictures.html
@@ -64,9 +64,9 @@
                     <!--*************************************************-->
                     <div class="modal-footer">
                         <span class="left">选中1张图片，共12.6K。</span>
-                        <button type="button" class="btn btn-default continue-click" id="add"
-                                data-dismiss="modal">继续添加
-                        </button>
+{#                        <button type="button" class="btn btn-default continue-click" id="add"#}
+{#                                data-dismiss="modal">继续添加#}
+{#                        </button>#}
                         <button type="button" class="btn btn-primary" id="img_upload">开始上传</button>
                     </div>
                 </div><!-- /.modal-content -->
