--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>This is Index</h1>
+    <img src="/media/avatars/index1.png" >
+    <img src="/media/avatars/index2.png" >
 {% endblock %}
