--- a/templates/user_management_html/online_users.html
+++ b/templates/user_management_html/online_users.html
@@ -4,7 +4,7 @@
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/check_box.js"></script>
     <div>
-        <a href="add/" class="btn btn-info" style="width: 100px;">添加数据</a>
+{#        <a href="add/" class="btn btn-info" style="width: 100px;">添加数据</a>#}
         <button class="btn btn-danger" id="batch_delete" style="width: 100px;">批量下线</button>
     </div>
     <br/>
