--- a/templates/mail_pictures/Spider_message/spider_message.html
+++ b/templates/mail_pictures/Spider_message/spider_message.html
@@ -5,7 +5,8 @@
     <link href="/static/mail/spider_message/message_header.css" rel="stylesheet">
     <link href="/static/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <div>
-        <span>******</span>
+        <h3>方案：<span>{{ rule_obj.title }}</span></h3>
+
         <a href="#" style="margin-left: 900px">标准视图</a> | <a href="#">精简视图</a>
     </div>
     <div class="message_header">
