--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-    <img src="/media/avatars/index1.png" >
-    <img src="/media/avatars/index2.png" >
+    <img src="/media/avatars/index1.png" style="width: 1200px">
+    <img src="/media/avatars/index2.png" style="width: 1200px">
 {% endblock %}
