实现了微博的敏感词功能

--- a/templates/xadmin/list_view.html
+++ b/templates/xadmin/list_view.html
@@ -51,7 +51,7 @@
                         </td>
                         {% for item in data %}
                             <td>
-                                <span>{{ item }}</span>
+                                <span>{{ item | slice:':20' }}</span>
                             </td>
                         {% endfor %}
                         <td>
