--- a/SpiderDB/templates/sensitive_words.html
+++ b/SpiderDB/templates/sensitive_words.html
@@ -7,6 +7,7 @@
     <br/>
     <br/>
     <button class="btn btn-danger" id="batch_delete" style="width: 100px;">批量删除</button>
+    <button type="button" class="btn btn-success" id="add"><i class="fa fa-plus"></i>添加敏感词</button>
     <hr/>
     <table class="table table-hover table-bordered">
         <thead>
@@ -39,15 +40,8 @@
     <br/>
     <br/>
     <br/>
-    <button type="button" class="btn btn-success" id="add"><i class="fa fa-plus"></i>添加敏感词</button>
     <form class="form-horizontal hidden" id="add_sensitive_words">
         {% csrf_token %}
-        <div class="form-group">
-            <label class="col-sm-2 control-label">所属用户：</label>
-            <div class="col-sm-10">
-                <label class="form-control-static">{{ request.user.username }}</label>
-            </div>
-        </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">敏感词：</label>
             <div class="col-sm-10">
@@ -60,26 +54,18 @@
         </div>
         <div class="form-group" align="center">
             <button type="button" class="btn btn-success" id="save">保存</button>
-            <button type="reset" class="btn btn-warning">取消</button>
+            <button type="button" class="btn btn-warning" id="cancel">取消</button>
         </div>
 
     </form>
     <script>
-        $("body").delegate("input[type='text']", "blur", function () {
-            if ($(this).val() == "") {
-                swal({
-                    title: "敏感词禁止为空！",
-                    icon: "warning",
-                    button: "好的"
-                }).then((willChange) => {
-                    if (willChange)
-                        $(this).focus()
-                })
-            }
+        $("body").delegate("#cancel", "click", function () {
+            window.location.reload()
         })
         $("#add").click(function () {
             $(this).addClass("hidden")
             $("#add_sensitive_words").removeClass("hidden")
+            $(".set_sensitive_word").focus()
         })
         $("#batch_delete").click(function () {
             var sensitive_words = new Array()
@@ -161,6 +147,17 @@
             )
         })
         $("body").delegate(".update_sensitive_word", "blur", function () {
+            if ($(this).val().length == 0) {
+                swal({
+                    title: "敏感词禁止为空！",
+                    icon: "warning",
+                    button: "好的"
+                }).then((willChange) => {
+                    if (willChange)
+                        $(this).focus()
+                })
+                return false
+            }
             swal({
                 title: "确定修改吗?",
                 text: "一旦修改，数据将无法找回",
@@ -217,6 +214,23 @@
             )
         })
         $("#save").click(function () {
+            var flag = true
+            $(".set_sensitive_word").each(function () {
+                if ($(this).val().length == 0) {
+                    swal({
+                        title: "敏感词禁止为空！",
+                        icon: "warning",
+                        button: "好的"
+                    }).then((willChange) => {
+                        if (willChange)
+                            $(this).focus()
+                    })
+                    flag = false
+                    return false
+                }
+            })
+            if (!flag)
+                return false
             var sensitive_words = new Array();
             $(".set_sensitive_word").each(function () {
                 sensitive_words.push($(this).val())
